[gd_scene load_steps=20 format=3 uid="uid://b65u1c7v5mbh6"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_ihga5"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="2_a54w8"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="2_kvqmk"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/controls_tab.gd" id="4_1fcak"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="6_4bdyr"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="6_fyb0f"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="8_fff00"]
[ext_resource type="Texture2D" uid="uid://cbb30ccopvh6r" path="res://Textures/Buttons/icons/reset.png" id="10_d874e"]
[ext_resource type="Texture2D" uid="uid://bbqo1lidfmuje" path="res://Textures/Buttons/icons/undo.png" id="11_a0bdl"]
[ext_resource type="PackedScene" uid="uid://80bi27me1iqr" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_down.tscn" id="11_nha8c"]
[ext_resource type="Texture2D" uid="uid://7svrwb52wwlb" path="res://Textures/Buttons/icons/redo.png" id="12_3t38n"]
[ext_resource type="Texture2D" uid="uid://ba6v4j0iomg0s" path="res://Textures/Buttons/icons/spanner.png" id="12_8scxb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ap8b"]
texture = ExtResource("2_kvqmk")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_jad7o"]
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("2_a54w8")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_4ap8b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kkki1"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
texture = ExtResource("2_kvqmk")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4g5m"]
resource_local_to_scene = true
shader = ExtResource("6_fyb0f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qquib"]
resource_local_to_scene = true
shader = ExtResource("6_fyb0f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4461j"]
resource_local_to_scene = true
shader = ExtResource("6_fyb0f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v63tq"]
resource_local_to_scene = true
shader = ExtResource("6_fyb0f")

[node name="ControlsTab" type="Control" node_paths=PackedStringArray("ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_ihga5")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jad7o")
script = ExtResource("4_1fcak")
ContentContainer = NodePath("MovingContainer/ContentContainer")
TabButton = NodePath("MovingContainer/PullOutTabButtonDown")
MovingContainer = NodePath("MovingContainer")
moving_container_margins = Vector2(2.08165e-12, -8)
move_direction = 3

[node name="MovingContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 27.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ContentContainer" type="PanelContainer" parent="MovingContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kkki1")

[node name="GridContainer" type="GridContainer" parent="MovingContainer/ContentContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
columns = 3

[node name="Label" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "CTRL-Z"
vertical_alignment = 2

[node name="Label2" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "C"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "CTRL-Y"
vertical_alignment = 2

[node name="Undo" parent="MovingContainer/ContentContainer/GridContainer" instance=ExtResource("6_4bdyr")]
material = SubResource("ShaderMaterial_x4g5m")
layout_mode = 2
icon = ExtResource("11_a0bdl")
minimum_size = Vector2(25, 25)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/GridContainer/Undo" instance=ExtResource("8_fff00")]
tooltip = "Undo"

[node name="Reset" parent="MovingContainer/ContentContainer/GridContainer" instance=ExtResource("6_4bdyr")]
material = SubResource("ShaderMaterial_qquib")
layout_mode = 2
icon = ExtResource("10_d874e")
minimum_size = Vector2(25, 25)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/GridContainer/Reset" instance=ExtResource("8_fff00")]
tooltip = "Reset"

[node name="Redo" parent="MovingContainer/ContentContainer/GridContainer" instance=ExtResource("6_4bdyr")]
material = SubResource("ShaderMaterial_4461j")
layout_mode = 2
icon = ExtResource("12_3t38n")
minimum_size = Vector2(25, 25)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/GridContainer/Redo" instance=ExtResource("8_fff00")]
tooltip = "Redo"

[node name="Label4" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "W: MOVE"
vertical_alignment = 2

[node name="Label5" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "SHIFT: SPLIT"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label6" type="Label" parent="MovingContainer/ContentContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
text = "X: DELETE"
vertical_alignment = 2

[node name="PullOutTabButtonDown" parent="MovingContainer" instance=ExtResource("11_nha8c")]
material = SubResource("ShaderMaterial_v63tq")
layout_mode = 2
size_flags_horizontal = 4
TabIcon = ExtResource("12_8scxb")
TabMinimumSize = Vector2(35, 18)
icon_use_parent_material = true

[connection signal="pressed" from="MovingContainer/ContentContainer/GridContainer/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="MovingContainer/ContentContainer/GridContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MovingContainer/ContentContainer/GridContainer/Redo" to="." method="_on_redo_pressed"]
